--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,6 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "browserify-zlib": "^0.2.0",
-    "path-browserify": "^1.0.1",
-    "querystring-es3": "^0.2.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
@@ -21,9 +19,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "util": "^0.12.4",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
